# logseqSpringThing

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  build.rs  diff.patch  docker-compose.yml  generateCodebase.sh  launch-docker.sh  nginx.conf  olderVersion.txt  package-lock.json  package.json  pnpm-lock.yaml  settings.toml  settings.yaml  vite.config.js  vite.config.ts
.cargo/: config.toml
.oldClient/: index.html  index.ts  vite.config.ts
.oldClient/config/: featureFlags.ts
.oldClient/core/: api.ts  debugState.ts  initialize.ts  logger.ts  resourceMonitor.ts  types.ts
.oldClient/diagnostics/: nodeLabelDiagnostics.ts
.oldClient/examples/: speech-demo.html  speech-demo.ts
.oldClient/platform/: platformManager.ts
.oldClient/rendering/: UnifiedTextRenderer.ts  textRenderer.ts
.oldClient/services/: NostrAuthService.ts  SettingsEventEmitter.ts  SettingsLayoutManager.ts  SettingsPreviewManager.ts
.oldClient/settings/: index.ts
.oldClient/state/: SettingsObserver.ts  graphData.ts  settings.ts
.oldClient/types/: three-ext.d.ts  three.d.ts  webxr.d.ts
.oldClient/ui/: ModularControlPanel.ts  auth.css  index.ts  styles.css
.oldClient/utils/: eventEmitter.ts
.oldClient/visualization/: HologramManager.ts
.oldClient/websocket/: websocketService.ts
.oldClient/xr/: xrInitializer.ts  xrInteraction.ts  xrTypes.ts
client/: components  index.html  index.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
client/config/: featureFlags.ts
client/core/: constants.ts  logger.ts  types.ts
client/monitoring/: NodeManagerMetrics.ts
client/public/: fix-errors.js
client/rendering/: EdgeManager.ts  EnhancedNodeManager.ts  VisualizationController.ts  scene.ts
client/services/: NostrAuthService.ts
client/src/: App.js  App.jsx  App.tsx  globals.css  main.js  main.tsx
client/state/: SettingsStore.ts  defaultSettings.ts  graphData.ts
client/ui/: ModularControlPanel.css  ModularControlPanel.ts
client/visualization/: HologramManager.ts  MetadataVisualizer.ts
client/websocket/: websocketService.ts
client/xr/: handInteraction.ts  xrInteraction.ts  xrSessionManager.ts
data/: settings.yaml
data/metadata/: metadata.json
data/public/: index.html
docs/: UI-TODO.md  message_types.md
docs/api/: index.md  rest.md  websocket-updated.md
docs/technical/: node-manager-migration.md  websockets.md
oldClient/: package.json
oldClient/audio/: AudioPlayer.ts
oldClient/core/: constants.ts  physicsConstants.ts  utils.ts
oldClient/diagnostics/: nodeIdBindingDiagnostics.ts  systemDiagnostics.ts
oldClient/monitoring/: NodeManagerMetrics.ts
oldClient/rendering/: EdgeManager.ts  MetadataVisualizer.ts  SDFFontAtlasGenerator.ts  VisualizationController.ts  scene.ts
oldClient/services/: AuthUIHandler.ts  SettingsPersistenceService.ts  SpeechWebSocketService.ts  initAuth.ts
oldClient/state/: SettingsStore.ts  defaultSettings.ts
oldClient/types/: gestures.ts  graph.ts  metadata.ts  nostr.d.ts  pako.d.ts  settings.ts  three-examples.d.ts  websocket.ts  xr.ts
oldClient/ui/: ModularControlPanel.css  controlPanelConfig.ts
oldClient/utils/: vectorUtils.ts
oldClient/visualization/: MetadataVisualizer.ts
oldClient/xr/: handInteraction.ts  xrSessionManager.ts
scripts/: codebase.txt  generateCodebase.sh  improved-docker-build.sh  large_files_output.txt  launch-docker.sh  todo.md
src/: Cargo.toml  app_state.rs  config.rs  generate_audio.py  generate_welcome_audio.py  lib.rs  main.rs  output.txt  sonata_tts.proto  tts_service.rs
src/config/: force_directed_params.rs  mod.rs
src/espeak-phonemizer/: Cargo.toml  build.rs
src/handlers/: file_handler.rs  graph_handler.rs  mod.rs  ragflow_handler.rs  settings_handler.rs  socket_flow_handler.rs  speech_handler.rs
src/models/: edge.rs  node.rs  simulation_params.rs
src/services/: file_service.rs  graph_service.rs  mod.rs  perplexity_service.rs  piper_service.rs  ragflow_service.rs  sonata_tts_service.rs  speech_service.rs  tts_client.rs  tts_service.rs
src/sonata-python/: Cargo.toml
src/utils/: audio_processor.rs  mod.rs  (+7 more)
(+208 files in other folders)
