[package]
name = "webxr-graph"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "src/sonata/sonata/core",
    "src/sonata/sonata/synth",
    "src/sonata/sonata/models/piper",
    "src/sonata/sonata-grpc",
    "src/sonata/espeak-phonemizer",
    "src/sonata/libsonata",
    "src/sonata/audio-ops",
]

[dependencies]
actix = "0.13"
actix-web = "4.9.0"
actix-web-actors = "4.1"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
async-trait = "0.1"
regex = "1.5"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
lazy_static = "1.4"
pulldown-cmark = "0.9"
config = { version = "0.13", features = ["toml"] }
env_logger = "0.10"
once_cell = "1.19.0"
rustls = "0.20"
rustls-pemfile = "1.0"
sha1 = "0.10.5"
wgpu = "0.15"
bytemuck = { version = "1.12", features = ["derive"] }
futures-intrusive = "0.4"
anyhow = "1.0"
rand = "0.8"
rayon = "1.5"
bytes = "1.0"
rodio = { version = "0.17.1", default-features = false, features = ["wav"] }
uuid = { version = "1.3", features = ["v4"] }
tonic = "0.11.0"
prost = "0.11"
hound = "3.5"
ndarray = "0.15.6"

sonata-core = { path = "src/sonata/sonata/core" }
sonata-synth = { path = "src/sonata/sonata/synth" }
sonata-piper = { path = "src/sonata/sonata/models/piper" }
sonata-grpc = { path = "src/sonata/sonata-grpc" }
espeak-phonemizer = { path = "src/sonata/espeak-phonemizer" }
libsonata = { path = "src/sonata/libsonata" }
audio-ops = { path = "src/sonata/audio-ops" }

[build-dependencies]
tonic-build = "0.11.0"
cmake = "0.1"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.2"
tokio-test = "0.4"
wiremock = "0.5"
env_logger = "0.10"
