[package]
name = "webxr"
version = "0.1.0"
edition = "2021"
description = "A WebXR graph visualization server with GPU-accelerated physics"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Web framework and WebSocket
actix-web = { version = "=4.5.1", features = ["compress-gzip"] }
actix-cors = "=0.7.0"
actix-files = "=0.6.5"
actix = "=0.13.1"
actix-web-actors = "=4.3.0"
tungstenite = "0.22"
tokio-tungstenite = { version = "0.22" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1.86"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = { version = "0.13", features = ["toml"] }
dotenvy = "0.15"
toml = "0.8"

# Logging
log = "0.4"
simplelog = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# GPU/Compute
bytemuck = { version = "=1.14.0", features = ["derive"] }  # Using derive feature with latest version
pollster = "0.3"
cudarc = { version = "0.11", features = ["driver", "cuda-12040"] }

# HTTP client and API
reqwest = { version = "0.11", features = ["json", "stream"] }
async-openai = "0.14.3"
# Even though backoff is unmaintained (RUSTSEC-2025-0012), we'll use the latest version
# since it's used transitively by async-openai and our code doesn't directly import it
backoff = { version = "0.4.0", features = ["tokio"] }
nostr-sdk = "0.26"

# Utilities
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
regex = "1.11"
lazy_static = "1.5"
once_cell = "1.19"
sha1 = "0.10.6"
scopeguard = "1.2"
url = "2.5.0"
flate2 = "1.0"
bytes = "1.5"
byteorder = "1.5"
urlencoding = "2.1"

# Math/Linear Algebra (needed for GPU compute)
nalgebra = "0.32"

# Added from the code block
glam = "0.24"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
pretty_assertions = "1.4"

[features]
default = ["gpu"]
gpu = ["cudarc/driver"]  # Enable GPU support with CUDA driver
cpu = []  # CPU-only mode

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[package.metadata.rust-version]
min = "1.70.0"

